--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-GOOGLE_API_KEY = AIzaSyAUuheglDp734q_MnsZWVV3ztGuDWv0X4k
-GROQ_API_KEY = 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
+GOOGLE_API_KEY = API key for Google services, such as Google Cloud Vision or Google Maps.
+GROQ_API_KEY = API key for Groq services, which may include AI model access or other Groq functionalities.
